--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
-<!DOCTYPE html>
+
 <html>
 	<head>
-		<title>My first three.js app</title>
-		<style>
-			body { margin: 0; }
-			canvas { display: block; }
-		</style>
+	  <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 	</head>
 	<body>
-		<script src="js/three.js"></script>
-		<script src="js/script.js"></script>
+	  <a-scene>
+  
+		<a-assets>
+		  <img id="sky" src="https://cdn.glitch.com/51bf6811-51a6-4392-8725-e93a5c65ce3b%2Fgif.gif?v=1605426636772">
+		  <video id="antarctica" autoplay loop="true" src="https://cdn.glitch.com/51bf6811-51a6-4392-8725-e93a5c65ce3b%2FAyutthaya%20-%20Easy%20Tripod%20Paint%20_%20360_VR%20Master%20Series%20_%20Free%20Download.mp4?v=1605427048716"> </video>
+		</a-assets>
+		
+		<a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
+		<a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
+		<a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
+		<a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+		 <a-videosphere src="#antarctica"></a-videosphere>
+	  </a-scene>
+	  <script src="js/script.js"></script>
 	</body>
+
 </html>
+
 
 
 
