--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,18 @@
 	  <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 	</head>
 	<body>
-	  <a-scene>
+	  <a-scene debug>
   
 		<a-assets>
 		  <img id="sky" src="https://cdn.glitch.com/51bf6811-51a6-4392-8725-e93a5c65ce3b%2Fgif.gif?v=1605426636772">
-		  <video id="antarctica" autoplay loop="true" src="https://cdn.glitch.com/51bf6811-51a6-4392-8725-e93a5c65ce3b%2FAyutthaya%20-%20Easy%20Tripod%20Paint%20_%20360_VR%20Master%20Series%20_%20Free%20Download.mp4?v=1605427048716"> </video>
 		</a-assets>
 		
-		<a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-		<a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-		<a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-		<a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-		 <a-videosphere src="#antarctica"></a-videosphere>
+		<a-box position="-5.048 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
+		<a-sphere position="0 1.25 -6.897" radius="1.25" color="#EF2D5E"></a-sphere>
+		<a-cylinder position="4.748 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
+		<a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" scale=" 5 5 1"></a-plane>
+		<a-sky color="#6EBAA7"></a-sky>
+		<a-camera calcdistance></a-camera>
 	  </a-scene>
 	  <script src="js/script.js"></script>
 	</body>
