--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,74 @@
-
 <html>
-	<head>
-	  <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-	</head>
-	<body>
-	  <a-scene>
-  
-		<a-assets>
-		  <img id="sky" src="https://cdn.glitch.com/51bf6811-51a6-4392-8725-e93a5c65ce3b%2Fgif.gif?v=1605426636772">
-		  <video id="antarctica" autoplay loop="true" src="https://cdn.glitch.com/51bf6811-51a6-4392-8725-e93a5c65ce3b%2FAyutthaya%20-%20Easy%20Tripod%20Paint%20_%20360_VR%20Master%20Series%20_%20Free%20Download.mp4?v=1605427048716"> </video>
-		</a-assets>
-		
-		<a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-		<a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-		<a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-		<a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-		 <a-videosphere src="#antarctica"></a-videosphere>
-	  </a-scene>
-	  <script src="js/script.js"></script>
-	</body>
+  <head>
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-tangram-terrain-component/dist/aframe-tangram-terrain-component.min.js"></script>
+  </head>
+  <body>
+    <a-scene>
+      <a-assets>
+        <img
+          id="sky"
+          src="https://cdn.glitch.com/51bf6811-51a6-4392-8725-e93a5c65ce3b%2Fgif.gif?v=1605426636772"
+        />
+        <a-asset-item
+          id="yamlElevation"
+          src="https://raw.githubusercontent.com/tangrams/terrain-demos/master/styles/terrarium-elevation.yaml"
+        />
+        <img id="map" src="textures/CMdOmV9W8AA5--n.png" />
 
+        <img id="normalmap" src="textures/normalmap.png" />
+        <!-- <video
+          id="antarctica"
+          autoplay
+          loop="true"
+          src="https://cdn.glitch.com/51bf6811-51a6-4392-8725-e93a5c65ce3b%2FAyutthaya%20-%20Easy%20Tripod%20Paint%20_%20360_VR%20Master%20Series%20_%20Free%20Download.mp4?v=1605427048716"
+        ></video> -->
+      </a-assets>
+      <a-sky color="#aaa"></a-sky>
+      <!-- <a-tangram-terrain
+        id="rockyTerrain"
+        map="textures/CMdOmV9W8AA5--n.png"
+        repeat="1 1"
+        map-style="#yamlElevation"
+        zoom="10"
+        center="15.8056, 7.7671"
+        px-world-ratio="12"
+        wireframe="false"
+        height-scale="40"
+        width="25"
+        depth="25"
+      >
+      </a-tangram-terrain> -->
+      <a-entity
+        id="terrain"
+        visible="true"
+        geometry="primitive: plane; buffer: true;
+      width: 70; height: 70; 
+      segmentsWidth: 10; segmentsHeight: 1;"
+        material="wireframe: false; displacementScale: 20;"
+        tangram-static-terrain="
+        map: #map;
+        normalMap: #normalmap;
+        bounds: 12.61882781982422,47.14139472293294,12.756156921386719,47.23472275076704;
+        lodCount: 4;
+        lod: 1;
+        vertexNormals: true;
+      "
+        rotation="-90 0 0"
+        position="0 -13 0"
+        sphere-matrix
+        NOanimation="property: material.displacementScale; dur: 4000; from: 0; to: 20; startEvents: tangram-terrain-loaded;"
+      >
+        <a-sphere id="marker" color="red" radius="0.2"></a-sphere>
+        <a-sphere id="marker2" color="red" radius="0.2"></a-sphere>
+        <a-sphere id="marker3" color="red" radius="0.2"></a-sphere>
+      </a-entity>
+      <!-- <a-videosphere src="#antarctica"></a-videosphere> -->
+      <a-camera foo position="0 1 0">
+        <a-cursor color="#FF0000" />
+      </a-camera>
+      <a-box color="green" position="0 0 3"> </a-box>
+    </a-scene>
+    <script src="js/script.js"></script>
+  </body>
 </html>
-
-
-
-
