some different scenes

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,31 @@
   <head>
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-tangram-terrain-component/dist/aframe-tangram-terrain-component.min.js"></script>
+    <script src="http://threejs.org/build/three.min.js"></script>
   </head>
   <body>
-    <a-scene>
+    <!-- <a-scene id="waitingRoom">
+      <a-assets> </a-assets>
+      <a-sky color="#bfbfbf"></a-sky>
+      <a-entity
+        geometry="primitive: plane; width: 1400; height: 1400;"
+        rotation="-90 0 0"
+        position="0 -93 0"
+        material="color: white"
+      ></a-entity>
+      <a-box color="green" position="0 2 0"> </a-box>
+
+      <a-camera foo position="0 1 0">
+        <a-cursor color="#FF0000" />
+      </a-camera>
+    </a-scene> -->
+    <a-scene
+      id="firstPerformance"
+      fog="type: exponential; density: 0.0014; "
+      animation="property: fog.color; dur: 4000;
+    from: #ffffff; to: #a6a6a6;
+    loop: false; dir: alternate"
+    >
       <a-assets>
         <img
           id="sky"
@@ -14,56 +36,72 @@
           id="yamlElevation"
           src="https://raw.githubusercontent.com/tangrams/terrain-demos/master/styles/terrarium-elevation.yaml"
         />
-        <img id="map" src="textures/CMdOmV9W8AA5--n.png" />
+        <img id="moon" src="textures/CMdOmV9W8AA5--n.png" />
+        <img id="map" src="textures/tahoe_map.jpg" />
 
         <img id="normalmap" src="textures/normalmap.png" />
-        <!-- <video
-          id="antarctica"
-          autoplay
-          loop="true"
-          src="https://cdn.glitch.com/51bf6811-51a6-4392-8725-e93a5c65ce3b%2FAyutthaya%20-%20Easy%20Tripod%20Paint%20_%20360_VR%20Master%20Series%20_%20Free%20Download.mp4?v=1605427048716"
-        ></video> -->
       </a-assets>
-      <a-sky color="#aaa"></a-sky>
-      <!-- <a-tangram-terrain
-        id="rockyTerrain"
-        map="textures/CMdOmV9W8AA5--n.png"
-        repeat="1 1"
-        map-style="#yamlElevation"
-        zoom="10"
-        center="15.8056, 7.7671"
-        px-world-ratio="12"
-        wireframe="false"
-        height-scale="40"
-        width="25"
-        depth="25"
-      >
-      </a-tangram-terrain> -->
+      <a-sky
+        color="#ffff00 "
+        animation="property: material.color; dur: 40000;
+      from: #ffff00 ; to: #340034;
+      loop: false; dir: alternate"
+      ></a-sky>
       <a-entity
         id="terrain"
         visible="true"
         geometry="primitive: plane; buffer: true;
-      width: 70; height: 70; 
-      segmentsWidth: 10; segmentsHeight: 1;"
-        material="wireframe: false; displacementScale: 20;"
+      width: 100; height: 100; 
+      segmentsWidth: 30; segmentsHeight: 1; "
+        material="wireframe: false; displacementScale: 10; "
         tangram-static-terrain="
-        map: #map;
+        map: #moon;
         normalMap: #normalmap;
         bounds: 12.61882781982422,47.14139472293294,12.756156921386719,47.23472275076704;
         lodCount: 4;
         lod: 1;
         vertexNormals: true;
+        
       "
         rotation="-90 0 0"
-        position="0 -13 0"
+        position="200 -13 0"
         sphere-matrix
         NOanimation="property: material.displacementScale; dur: 4000; from: 0; to: 20; startEvents: tangram-terrain-loaded;"
       >
-        <a-sphere id="marker" color="red" radius="0.2"></a-sphere>
-        <a-sphere id="marker2" color="red" radius="0.2"></a-sphere>
-        <a-sphere id="marker3" color="red" radius="0.2"></a-sphere>
       </a-entity>
-      <!-- <a-videosphere src="#antarctica"></a-videosphere> -->
+      <a-entity
+        geometry="primitive: plane; width: 900; height: 900; segmentsHeight: 20; segmentsWidth: 20;"
+        rotation="-90 0 0"
+        position="0 -93 0"
+        material=" displacementMap: #map; displacementScale: 290;roughness: 1; normalMap: #map; normalScale: 10; color: #474747;"
+      ></a-entity>
+      <a-camera foo position="0 1 0">
+        <a-cursor color="#FF0000" />
+      </a-camera>
+      <a-box color="green" position="0 0 3"> </a-box>
+    </a-scene>
+    <a-scene id="secondPerformance" fog="type: exponential; density: 0.001; ">
+      <a-assets>
+        <img
+          id="sky"
+          src="https://cdn.glitch.com/51bf6811-51a6-4392-8725-e93a5c65ce3b%2Fgif.gif?v=1605426636772"
+        />
+        <a-asset-item
+          id="yamlElevation"
+          src="https://raw.githubusercontent.com/tangrams/terrain-demos/master/styles/terrarium-elevation.yaml"
+        />
+        <img id="moon" src="textures/CMdOmV9W8AA5--n.png" />
+        <img id="map" src="textures/tahoe_map.jpg" />
+
+        <img id="normalmap" src="textures/normalmap.png" />
+      </a-assets>
+      <a-sky
+        color="#ffc04c "
+        animation="property: material.color; dur: 3000;
+    from: #ffc04c ; to: #4c0000;
+    loop: false; dir: alternate"
+      ></a-sky>
+
       <a-camera foo position="0 1 0">
         <a-cursor color="#FF0000" />
       </a-camera>
