--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,6 @@
     <script src="http://threejs.org/build/three.min.js"></script>
   </head>
   <body>
-    <!-- <a-scene id="waitingRoom">
-      <a-assets> </a-assets>
-      <a-sky color="#bfbfbf"></a-sky>
-      <a-entity
-        geometry="primitive: plane; width: 1400; height: 1400;"
-        rotation="-90 0 0"
-        position="0 -93 0"
-        material="color: white"
-      ></a-entity>
-      <a-box color="green" position="0 2 0"> </a-box>
-
-      <a-camera foo position="0 1 0">
-        <a-cursor color="#FF0000" />
-      </a-camera>
-    </a-scene> -->
     <a-scene
       id="firstPerformance"
       fog="type: exponential; density: 0.0014; "
@@ -107,6 +92,6 @@
       </a-camera>
       <a-box color="green" position="0 0 3"> </a-box>
     </a-scene>
-    <script src="js/script.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
