--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
 
 		<!-- Scene essentials -->
 
-		<a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" scale=" 5 5 1"></a-plane>
-		<a-sky color="#6EBAA7"></a-sky>
+		<a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#222" scale=" 5 5 1"></a-plane>
+		<a-sky color="#000000"></a-sky>
 		<a-camera foo geometry="primitive: box" aabb-collider="objects: a-entity"></a-camera>
 		
 
