changes to opening credits

--- a/public/opening.html
+++ b/public/opening.html
@@ -26,15 +26,15 @@
         </div>
         <div class="textcontainer nodisplay roboticfont" id="textcontainer2">
             <h1 id="text3">This performance is best experienced with headphones</h1>
-            <img id="text3_image" src="icons/headphones.png">
+            <img id="text3_image" src="icons/headphones3.png">
         </div>
         <div class="textcontainer nodisplay roboticfont" id="textcontainer3">
             <h1 id="text4">We recommend being in an isolated environment to avoid interruptions</h1>
-            <img id="text4_image" src="icons/room.png">
+            <img id="text4_image" src="icons/cube3.png">
         </div>
         <div class="textcontainer nodisplay roboticfont" id="textcontainer4">
             <h1 id="text5">This performance is best experienced in total darkness.</h1>
-            <img id="text5_image" src="icons/room.png">
+            <img id="text5_image" src="icons/lightbulb3.png">
             <h2 id="text6"> Now it is the time to draw the curtains, switch off your lights, and move if necessary.</h2>     
         </div>     
         <div class="textcontainer nodisplay roboticfont" id="textcontainer5">
