--- a/public/opening.html
+++ b/public/opening.html
@@ -38,8 +38,8 @@
             <h2 id="text6"> Now it is the time to draw the curtains, switch off your lights, and move if necessary.</h2>     
         </div>     
         <div class="textcontainer nodisplay roboticfont" id="textcontainer5">
-            <button>Come Back Later</button>   
-            <button>Enter the world</button>   
+            <button onclick="reload()">Come Back Later</button>   
+            <button><a href="/lobby">Enter the world</a></button>   
         </div>     
         <script src="js/opening.js" ></script>
     </body>
