randomly initialize shapes

--- a/public/francis1.html
+++ b/public/francis1.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <a-scene
+    shaperain
     id="firstPerformance"
     fog="type: exponential; density: 0.0014; "
     animation="property: fog.color; dur: 4000;
