--- a/public/francis1.html
+++ b/public/francis1.html
@@ -61,10 +61,10 @@
       position="0 -93 0"
       material=" displacementMap: #map; displacementScale: 290;roughness: 1; normalMap: #map; normalScale: 10; color: #474747;"
     ></a-entity>
-    <a-camera foo position="0 1 0">
+    <a-camera foo position="0 1 4.555">
       <a-cursor color="#FF0000" />
     </a-camera>
-    <a-box color="green" position="0 0 3"> </a-box>
+    <!-- <a-box color="green" position="0 0 3"> </a-box> -->
   </a-scene>
   <script src="js/francis1.js"></script>
 </body>
