--- a/public/francis1.html
+++ b/public/francis1.html
@@ -30,7 +30,7 @@
       <a-sky
         id="scene1Sky"
         color="#ffff00 "
-        animation="property: material.color; dur: 4000;
+        animation="property: material.color; dur: 30000;
     from: #ffff00 ; to: #340034;
     loop: false; dir: alternate"
       ></a-sky>
@@ -62,7 +62,7 @@
       position="0 -93 0"
       material=" displacementMap: #map; displacementScale: 290;roughness: 1; normalMap: #map; normalScale: 10; color: #474747;"
     ></a-entity>
-    <a-camera foo wasd-controls="enabled:false" look-controls="enabled:false" position="0 1 4.555">
+    <a-camera foo position="0 1 4.555">
       <a-cursor color="#FF0000" />
     </a-camera>
     <!-- <a-box color="green" position="0 0 3"> </a-box> -->
