--- a/public/francis2.html
+++ b/public/francis2.html
@@ -6,7 +6,7 @@
     <script src="https://unpkg.com/aframe-aabb-collider-component@3.1.0/dist/aframe-aabb-collider-component.min.js"></script>
   </head>
   <body>
-    <a-scene id="lobby" debug>
+    <!-- <a-scene id="lobby" debug>
       <a-assets>
         <a-asset-item id="francis-obj" src="static/francis.obj"></a-asset-item>
         <a-asset-item id="francis-mtl" src="static/francis.mtl"></a-asset-item>
@@ -94,7 +94,7 @@ segmentsWidth: 30; segmentsHeight: 1; "
       <a-camera foo wasd-controls="enabled: false" position="0 1 0">
         <a-cursor color="#FFFFFF" />
       </a-camera>
-    </a-scene>
+    </a-scene> -->
 
     <a-scene id="secondPerformance">
       <a-assets>
@@ -114,9 +114,9 @@ segmentsWidth: 30; segmentsHeight: 1; "
       <a-sky
         id="scene2Sky"
         color="#ffc04c "
-        animation="property: material.color; dur: 20000;
+        animation="property: material.color; dur: 25000;
         from: #ffc04c ; to: #4c0000;
-        loop: false; dir: alternate; autoplay: false"
+        loop: false; dir: alternate; autoplay: true"
       ></a-sky>
       <a-entity position="0 2.25 -15" particle-system="preset: dust"></a-entity>
 
@@ -132,7 +132,7 @@ segmentsWidth: 30; segmentsHeight: 1; "
         loop: false; dir: alternate; autoplay: true"
       ></a-entity>
     </a-scene>
-    <a-scene id="thirdPerformance">
+    <!-- <a-scene id="thirdPerformance">
       <a-assets>
         <img id="skyOne" src="textures/starry.png" />
       </a-assets>
@@ -164,7 +164,7 @@ segmentsWidth: 30; segmentsHeight: 1; "
       >
         <a-cursor color="#FFFFFF" />
       </a-camera>
-    </a-scene>
+    </a-scene> -->
 
     <script src="js/francis2.js"></script>
   </body>
