make one html page, add cracked ground animation

--- a/public/francis1.html
+++ b/public/francis1.html
@@ -40,7 +40,7 @@
         geometry="primitive:sphere; radius:30; phiLength:360; phiStart:0; thetaLength:90"
         material="shader:flat; side:back; height:2048; src:#skymap; width:2048;"
         from: #ffff00 ; to: #ff5cff;
-        loop: false; dir: alternate"
+        loop: false; dir: alternate
       ></a-entity>
       <!-- <a-entity
         id="terrain"
