added socket.io integration

--- a/public/francis1.html
+++ b/public/francis1.html
@@ -3,6 +3,7 @@
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-tangram-terrain-component/dist/aframe-tangram-terrain-component.min.js"></script>
     <script src="http://threejs.org/build/three.min.js"></script>
+    <script src='js/lib/socket.io.js'></script>
   </head>
   <!-- animation="property: fog.color; dur: 4000;
   from: #ffffff; to: #a6a6a6;
