--- a/public/francis2.html
+++ b/public/francis2.html
@@ -4,6 +4,7 @@
     <script src="https://unpkg.com/aframe-particle-system-component@1.1.3/dist/aframe-particle-system-component.min.js"></script>
     <script src="https://unpkg.com/aframe-tangram-terrain-component/dist/aframe-tangram-terrain-component.min.js"></script>
     <script src="https://unpkg.com/aframe-aabb-collider-component@3.1.0/dist/aframe-aabb-collider-component.min.js"></script>
+    <script src='js/lib/socket.io.js'></script>
   </head>
   <body>
     <!-- <a-scene id="lobby" debug>
