--- a/public/lobby.html
+++ b/public/lobby.html
@@ -2,6 +2,7 @@
 	<head>
 	  <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 	  <script src="https://unpkg.com/aframe-aabb-collider-component@3.1.0/dist/aframe-aabb-collider-component.min.js"></script>
+	  <script src='js/lib/socket.io.js'></script>
 	</head>
 	<body>
 	  <a-scene debug>
