--- a/public/opening.html
+++ b/public/opening.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="static/opening.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src='js/lib/socket.io.js'></script>
 
     <!-- font -->
     <link
