--- a/public/main.html
+++ b/public/main.html
@@ -40,14 +40,19 @@
         <img id="cracksWhite" src="textures/cracksTextures/crackWhite.png" />
       </a-assets>
       <a-entity id="lobby" visible="true">
-        <a-plane
-          position="0 0 -4"
-          rotation="-90 0 0"
+        <!-- <a-plane
+
           width="4"
           height="4"
-          color="#222"
+          color=""
           scale=" 5 5 1"
-        ></a-plane>
+        ></a-plane> -->
+        <a-entity
+        geometry="primitive: plane; width: 10000; height: 10000; segmentsHeight: 20; segmentsWidth: 20;"
+        position="0 0 -4"
+        rotation="-90 0 0"
+        material="color: #222"
+      ></a-entity>
         <a-sky color="#000000"></a-sky>
         <a-camera
           foo
@@ -177,6 +182,6 @@ segmentsWidth: 30; segmentsHeight: 1; "
       </a-camera> -->
       </a-entity>
     </a-scene>
-    <script src="js/francis2.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
