--- a/public/opening.html
+++ b/public/opening.html
@@ -53,7 +53,7 @@
     </div>
     <div class="textcontainer nodisplay roboticfont" id="textcontainer5">
       <button onclick="reload()"><a href="#">Come Back Later</a></button>
-      <button><a href="/lobby">Enter the world</a></button>
+      <button><a href="/performance">Enter the world</a></button>
     </div>
     <script src="js/opening.js"></script>
   </body>
