--- a/public/francis2.html
+++ b/public/francis2.html
@@ -4,6 +4,7 @@
     <script src="https://unpkg.com/aframe-particle-system-component@1.1.3/dist/aframe-particle-system-component.min.js"></script>
     <script src="https://unpkg.com/aframe-tangram-terrain-component/dist/aframe-tangram-terrain-component.min.js"></script>
     <script src="https://unpkg.com/aframe-aabb-collider-component@3.1.0/dist/aframe-aabb-collider-component.min.js"></script>
+    <script src="https://unpkg.com/aframe-lensflare-component/dist/aframe-lensflare-component.min.js"></script>
   </head>
 
   <!-- Color for landscape scene 1: material="roughness: 1; normalMap: #map; normalScale: 10; color: #110611;" -->
@@ -14,7 +15,7 @@
         <a-asset-item id="francis-obj" src="static/francis.obj"></a-asset-item>
         <a-asset-item id="francis-mtl" src="static/francis.mtl"></a-asset-item>
         <img id="skymap" src="textures/sky2.png" crossorigin="anonymous" />
-
+        <img id="flare" src="textures/flare.jpg" />
         <img
           id="sky"
           src="https://cdn.glitch.com/51bf6811-51a6-4392-8725-e93a5c65ce3b%2Fgif.gif?v=1605426636772"
@@ -47,29 +48,175 @@
           height="4"
           color="#222"
           scale=" 5 5 1"
+          animation="property: color; dur: 4000;
+          from: #ffffff; to: #222;
+          loop: false; reapeat: 3; dir: alternate; autoplay: true"
         ></a-plane>
-        <a-sky color="#000000"></a-sky>
-        <a-camera
+        <a-sky
+          color="#ffffff"
+          animation="property: color; dur: 4000;
+        from: #ffffff; to: #000000;
+        loop: false; reapeat: 3; dir: alternate; autoplay: true"
+        ></a-sky>
+        <!-- <a-entity
+          position="0 1 0"
+          camera
+          look-controls
+          wasd-controls
           foo
           id="lobbyCam"
-          geometry="primitive: box"
-          aabb-collider="objects: a-entity"
-        ></a-camera>
+        > -->
+        <a-entity id="rig">
+          <!-- raycastscript put in a-box. -->
+          <a-camera foo id="lobbyCam"> </a-camera>
 
+          <!-- <a-entity
+            cursor="fuse: false"
+            position="0 0 -1"
+            geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
+            material="color: black; shader: flat"
+          ></a-entity> -->
+          <a-box
+            position="0 1 2"
+            rotation="0 90 35"
+            scale="0.4 0.4 0.4"
+            id="raycastCube"
+            aabb-collider="objects: a-entity"
+            raycastscript
+          ></a-box>
+          <!-- <a-sphere
+            id="flare"
+            radius="0.2"
+            color="white"
+            lensflare="createLight:true; lightType: point; intensity: 70; src: #flare; target: #lobbyCam; lightColor:white"
+            position="0 2 -4"
+          ></a-sphere> -->
+        </a-entity>
+        <!-- </a-entity> -->
+        <!-- <a-light
+          type="directional"
+          intensity="0"
+          color="white"
+          position="-1 1 0"
+          animation="property: intensity; dur: 2000;
+          from: 0; to: 6;
+          loop: false; dir: alternate; autoplay: true"
+        ></a-light> -->
         <a-entity
+          light="color: #BBB; type: ambient"
+          data-aframe-default-light=""
+          aframe-injected=""
+          visible=""
+          color="#ffffff"
+          animation="property: color; dur: 4000;
+        from: #ffffff; to: #BBB;
+        loop: false; reapeat: 3; dir: alternate; autoplay: true"
+        ></a-entity>
+        <a-entity
+          light="intensity: 0.6; castShadow: true"
+          position="-0.5 1 1"
+          data-aframe-default-light=""
+          aframe-injected=""
+          visible=""
+          animation="property: color; dur: 4000;
+          from: #ffffff; to: #BBB;
+          loop: false; reapeat: 3; dir: alternate; autoplay: true"
+        ></a-entity>
+
+        <a-light
+          type="point"
+          intensity="1"
+          id="francis1Light"
+          color="white"
+          distance="3.6"
+          position="-5 1 -3"
+          animation="property: intensity; dur: 4000;
+        from: 6; to: 0.6;
+        loop: false; reapeat: 3; dir: alternate; autoplay: true"
+        >
+        </a-light>
+        <a-light
+          type="point"
+          intensity="1"
+          id="francis1LightTwo"
+          color="white"
+          distance="3.6"
+          position="-5 1 -3"
+          animation="property: intensity; dur: 2000;
+       from: 0.6; to: 6;
+       loop: false; reapeat: 3; dir: alternate; autoplay: false"
+        >
+        </a-light>
+        <a-entity
+          francis1mouseenter
           id="francis1"
+          class="francis"
           obj-model="obj: #francis-obj; mtl: #francis-mtl"
           position="-5.048 -0.238 -3"
           scale="0.704 0.704 0.704"
         ></a-entity>
+        <a-torus
+          id="francis1Torus"
+          color="white"
+          emissive="white"
+          arc="1"
+          position="-4.243 1.220 -2.366"
+          rotation="0 39 0"
+          segments-radial="50"
+          segments-tubular="200"
+          radius="0.5"
+          radius-tubular="0.03"
+          visible="false"
+        ></a-torus>
+        <!-- <a-entity position="0 1 0">
+          <a-entity mixin="cube toruss" geometry="arc: 5">
+            <a-animation
+              begin="click"
+              attribute="geometry.arc"
+              from="5"
+              to="360"
+              easing="linear"
+              dur="2000"
+              fill="backwards"
+            ></a-animation>
+          </a-entity>
+        </a-entity> -->
+        <a-light
+          type="point"
+          intensity="0"
+          id="francis2Light"
+          color="white"
+          distance="3.6"
+          position="-0 1 -6"
+          animation="property: intensity; dur: 4000;
+        from: 6; to: 0.6;
+        loop: false; dir: alternate; autoplay: true"
+        ></a-light>
+        <a-torus
+          id="francis2Torus"
+          color="white"
+          emissive="white"
+          arc="1"
+          position="0 1.220 -6.11"
+          rotation="0 0 0"
+          segments-radial="50"
+          segments-tubular="200"
+          radius="0.5"
+          radius-tubular="0.03"
+          visible="false"
+        ></a-torus>
         <a-entity
+          francis2mouseenter
           id="francis2"
+          class="francis"
           obj-model="obj: #francis-obj; mtl: #francis-mtl"
           position="0 -0.238 -6.897"
           scale="0.704 0.704 0.704"
         ></a-entity>
         <a-entity
+          francis3mouseenter
           id="francis3"
+          class="francis"
           obj-model="obj: #francis-obj; mtl: #francis-mtl"
           position="4.748 -0.238 -3"
           scale="0.704 0.704 0.704"
