--- a/public/francis2.html
+++ b/public/francis2.html
@@ -131,7 +131,7 @@
           distance="3.6"
           position="-5 1 -3"
           animation="property: intensity; dur: 4000;
-        from: 6; to: 0.6;
+        from: 6; to: 0.3;
         loop: false; reapeat: 3; dir: alternate; autoplay: true"
         >
         </a-light>
@@ -142,7 +142,7 @@
           color="white"
           distance="3.6"
           position="-5 1 -3"
-          animation="property: intensity; dur: 2000;
+          animation="property: intensity; dur: 4000;
        from: 0.6; to: 6;
        loop: false; reapeat: 3; dir: alternate; autoplay: false"
         >
@@ -183,15 +183,28 @@
         </a-entity> -->
         <a-light
           type="point"
-          intensity="0"
+          intensity="1"
           id="francis2Light"
           color="white"
           distance="3.6"
-          position="-0 1 -6"
+          position="0 1 -6"
           animation="property: intensity; dur: 4000;
-        from: 6; to: 0.6;
-        loop: false; dir: alternate; autoplay: true"
-        ></a-light>
+        from: 6; to: 0.3;
+        loop: false; reapeat: 3; dir: alternate; autoplay: true"
+        >
+        </a-light>
+        <a-light
+          type="point"
+          intensity="1"
+          id="francis2LightTwo"
+          color="white"
+          distance="3.6"
+          position="0 1 -6"
+          animation="property: intensity; dur: 4000;
+     from: 0.6; to: 6;
+     loop: false; reapeat: 3; dir: alternate; autoplay: false"
+        >
+        </a-light>
         <a-torus
           id="francis2Torus"
           color="white"
@@ -221,6 +234,30 @@
           position="4.748 -0.238 -3"
           scale="0.704 0.704 0.704"
         ></a-entity>
+        <a-light
+          type="point"
+          intensity="1"
+          id="francis3Light"
+          color="white"
+          distance="3.6"
+          position="4.748 1.5 -3"
+          animation="property: intensity; dur: 4000;
+      from: 6; to: 0.2;
+      loop: false; reapeat: 3; dir: alternate; autoplay: true"
+        >
+        </a-light>
+        <a-light
+          type="point"
+          intensity="1"
+          id="francis3LightTwo"
+          color="white"
+          distance="3.6"
+          position="4.748 1.5 -3"
+          animation="property: intensity; dur: 4000;
+   from: 0.6; to: 6;
+   loop: false; reapeat: 3; dir: alternate; autoplay: false"
+        >
+        </a-light>
       </a-entity>
       <a-entity shaperain id="firstPerformance" visible="false">
         <a-sky
