added user leaves

--- a/public/main.html
+++ b/public/main.html
@@ -182,6 +182,7 @@ segmentsWidth: 30; segmentsHeight: 1; "
       </a-camera> -->
       </a-entity>
     </a-scene>
+    <script src = "js/lib/socket.io.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
