added shadow francis

--- a/public/main.html
+++ b/public/main.html
@@ -13,6 +13,8 @@
       <a-assets>
         <a-asset-item id="francis-obj" src="static/francis.obj"></a-asset-item>
         <a-asset-item id="francis-mtl" src="static/francis.mtl"></a-asset-item>
+        <a-asset-item id="human-obj" src="static/human.obj"></a-asset-item>
+
         <img id="skymap" src="textures/sky2.png" crossorigin="anonymous" />
 
         <img
@@ -60,6 +62,24 @@
           geometry="primitive: box"
           aabb-collider="objects: a-entity"
         ></a-camera>
+
+        <a-entity
+          id="shadow_francis"
+          obj-model="obj: #francis-obj; mtl: #francis-mtl"
+          position="-8 -0.238 -3"
+          scale="0.704 0.704 0.704"
+          model-opacity="0.5"
+        >
+            <a-animation attribute="model-opacity"
+            dur="10000"
+            from="1"
+            to="0"
+            repeat="indefinite"></a-animation>
+      
+      
+        </a-entity>
+
+        <a-entity position="0 2.25 -15" particle-system="preset: dust"></a-entity>
 
         <a-entity
           id="francis1"
