--- a/public/francis2.html
+++ b/public/francis2.html
@@ -39,6 +39,7 @@
           src="textures/cracksTextures/crackTexture.png"
         />
         <img id="cracksWhite" src="textures/cracksTextures/crackWhite.png" />
+        <a-mixin id="red" material="color: red"></a-mixin>
       </a-assets>
       <a-entity id="lobby" visible="true">
         <a-plane
@@ -66,9 +67,26 @@
           foo
           id="lobbyCam"
         > -->
-        <a-entity id="rig">
+        <!-- <a-entity id="rig" position="0 1 0"> -->
+        <a-entity position="-3.5 1 0">
+          <a-entity mixin="cube red"> </a-entity>
+        </a-entity>
+        <a-entity position="0 1 0">
           <!-- raycastscript put in a-box. -->
-          <a-camera foo id="lobbyCam"> </a-camera>
+          <a-entity camera foo look-controls wasd-controls id="lobbyCam">
+            <a-entity
+              id="cursorReticle"
+              position="0 0 -1.9"
+              animation__click="property: geometry.thetaLength; startEvents: click; easing: easeInCubic; dur: 2000; from: 359; to: 360"
+              animation__fusing="property: geometry.thetaLength; startEvents: fusing; easing: easeInCubic; dur: 1500; from: 0; to: 359"
+              animation__mouseleave="property: geometry.thetaLength; startEvents: mouseleave; easing: easeInCubic; dur: 500; to: 0"
+              geometry="primitive: ring; radiusInner: 0.03; radiusOuter: 0.045;"
+              material="color: black; shader: flat; opacity: 1"
+              cursor="maxDistance: 4; fuse: true"
+              raycaster="far: 2"
+            >
+            </a-entity>
+          </a-entity>
 
           <!-- <a-entity
             cursor="fuse: false"
@@ -84,14 +102,16 @@
             aabb-collider="objects: a-entity"
             raycastscript
           ></a-box>
-          <!-- <a-sphere
+        </a-entity>
+        <a-box> </a-box>
+
+        <!-- <a-sphere
             id="flare"
             radius="0.2"
             color="white"
             lensflare="createLight:true; lightType: point; intensity: 70; src: #flare; target: #lobbyCam; lightColor:white"
             position="0 2 -4"
           ></a-sphere> -->
-        </a-entity>
         <!-- </a-entity> -->
         <!-- <a-light
           type="directional"
@@ -154,7 +174,24 @@
           obj-model="obj: #francis-obj; mtl: #francis-mtl"
           position="-5.048 -0.238 -3"
           scale="0.704 0.704 0.704"
-        ></a-entity>
+          light="type: hemisphere; color: white; intensity: 0;"
+          animation__rotation="property: light.intensity; from:0; to: 5; loop: 1; dur: 2000; delay:100; dir: alternate; startEvents: click;"
+          sky="color: white"
+        >
+          <!-- animation="property: intensity; dur: 4000;
+        from: 6; to: 0.3;
+        loop: false; reapeat: 3; dir: alternate; autoplay: true" -->
+          >
+          <a-light
+            type="point"
+            intensity="1"
+            id="francis2Light"
+            color="white"
+            distance="3.6"
+            position="0 1 -6"
+          >
+          </a-light>
+        </a-entity>
         <a-torus
           id="francis1Torus"
           color="white"
@@ -181,18 +218,7 @@
             ></a-animation>
           </a-entity>
         </a-entity> -->
-        <a-light
-          type="point"
-          intensity="1"
-          id="francis2Light"
-          color="white"
-          distance="3.6"
-          position="0 1 -6"
-          animation="property: intensity; dur: 4000;
-        from: 6; to: 0.3;
-        loop: false; reapeat: 3; dir: alternate; autoplay: true"
-        >
-        </a-light>
+
         <a-light
           type="point"
           intensity="1"
@@ -225,6 +251,8 @@
           obj-model="obj: #francis-obj; mtl: #francis-mtl"
           position="0 -0.238 -6.897"
           scale="0.704 0.704 0.704"
+          light="type: hemisphere; color: white; intensity: 0;"
+          animation__rotation="property: light.intensity; from:0; to: 5; loop: 1; dur: 2000; delay:100; dir: alternate; startEvents: click;"
         ></a-entity>
         <a-entity
           francis3mouseenter
@@ -233,8 +261,10 @@
           obj-model="obj: #francis-obj; mtl: #francis-mtl"
           position="4.748 -0.238 -3"
           scale="0.704 0.704 0.704"
+          light="type: hemisphere; color: white; intensity: 0;"
+          animation__rotation="property: light.intensity; from:0; to: 5; loop: 1; dur: 2000; delay:100; dir: alternate; startEvents: click;"
         ></a-entity>
-        <a-light
+        <!-- <a-light
           type="point"
           intensity="1"
           id="francis3Light"
@@ -257,7 +287,7 @@
    from: 0.6; to: 6;
    loop: false; reapeat: 3; dir: alternate; autoplay: false"
         >
-        </a-light>
+        </a-light> -->
       </a-entity>
       <a-entity shaperain id="firstPerformance" visible="false">
         <a-sky
@@ -274,6 +304,7 @@
           position="0 0 0"
           material="roughness: 1; normalMap: #normalMapCracks; normalScale: 10; color: #0f0f0f; src:#cracksWhite; repeat: 22 22"
         ></a-entity>
+        <a-light type="directional" position="0 2 0"></a-light>
         <a-entity
           id="floorToFadeScene1"
           geometry="primitive: plane; width: 340; height: 340; segmentsHeight: 0; segmentsWidth: 0;"
