--- a/public/opening.html
+++ b/public/opening.html
@@ -52,7 +52,7 @@
       </h2>
     </div>
     <div class="textcontainer nodisplay roboticfont" id="textcontainer5">
-      <button onclick="reload()"><a href="#">Come Back Later</a></button>
+      <!-- <button onclick="reload()"><a href="#">Come Back Later</a></button> -->
       <button><a href="/lobby">Enter the world</a></button>
     </div>
     <script src="js/opening.js"></script>
