--- a/public/francis2.html
+++ b/public/francis2.html
@@ -56,6 +56,7 @@
           height="4"
           color="#222"
           scale=" 5 5 1"
+          material="roughness: 1"
           animation="property: color; dur: 4000;
           from: #ffffff; to: #222;
           loop: false; dir: alternate; autoplay: true"
@@ -160,7 +161,7 @@
         loop: false; reapeat: 3; dir: alternate; autoplay: true"
         ></a-entity>
         <a-entity
-          light="intensity: 0.6; castShadow: true"
+          light="intensity: 1.2; castShadow: true"
           position="-0.5 1 1"
           data-aframe-default-light=""
           aframe-injected=""
@@ -178,7 +179,7 @@
           distance="3.6"
           position="-5 1 -3"
           animation="property: intensity; dur: 4000;
-        from: 6; to: 0.3;
+        from: 6; to: 1.5;
         loop: false; reapeat: 3; dir: alternate; autoplay: true"
         >
         </a-light>
