afixed merge errors

--- a/public/opening.html
+++ b/public/opening.html
@@ -55,6 +55,6 @@
       <!-- <button onclick="reload()"><a href="#">Come Back Later</a></button> -->
       <button><a href="/performance">Enter the world</a></button>
     </div>
-    <script src="js/main.js"></script>
+    <script src="js/opening.js"></script>
   </body>
 </html>
