--- a/public/opening.html
+++ b/public/opening.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="static/opening.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src='js/lib/socket.io.js'></script>
+    <script src="js/lib/socket.io.js"></script>
 
     <!-- font -->
     <link
@@ -26,8 +26,10 @@
     />
   </head>
   <body>
+    <div id="fullscreenFadeIn"></div>
     <audio id="lobbyMusic" src="./sounds/lobbysound.mp3" loop="loop"></audio>
-    <div class="textcontainer" id="textcontainer1">
+    <div class="textcontainer " id="textcontainer1">
+      <!-- <div class="textcontainer" id="textcontainer1"> -->
       <h1 class="nodisplay" id="text1">When once the sky was blue</h1>
       <h2 class="nodisplay" id="text2">a virtual experience</h2>
     </div>
@@ -52,8 +54,13 @@
       </h2>
     </div>
     <div class="textcontainer nodisplay roboticfont" id="textcontainer5">
+      <!-- <div class="textcontainer nodisplay roboticfont" id="textcontainer5"> -->
+
       <!-- <button onclick="reload()"><a href="#">Come Back Later</a></button> -->
-      <button><a href="/performance">Enter the world</a></button>
+      <div class="centerButton">
+        <a href="#" id="toScene" onclick="fadein()">Enter the world</a>
+      </div>
+      <!-- <button><a href="/performance">Enter the world</a></button> -->
     </div>
     <script src="js/opening.js"></script>
   </body>
