change from o3d object to plane

--- a/public/main.html
+++ b/public/main.html
@@ -276,7 +276,7 @@
         ></a-entity>
       </a-entity>
     </a-scene>
-
+    <script src="js/lib/jquery-3.5.1.js"></script>
     <script src = "js/lib/socket.io.js"></script>
     <script src="js/main.js"></script>
   </body>
