changed shadow source

--- a/public/main.html
+++ b/public/main.html
@@ -17,6 +17,7 @@
       vr-mode-ui="enabled: false"
     >
       <a-assets>
+        <img id="shadow" crossorigin="anonymous" src="static/shadow.png">
         <a-asset-item id="francis-obj" src="static/cloak.obj"></a-asset-item>
         <a-asset-item id="francis-mtl" src="static/cloak.mtl"></a-asset-item>
         <img id="skymap" src="textures/sky2.png" crossorigin="anonymous" />
