finally fixed shape rain

--- a/public/main.html
+++ b/public/main.html
@@ -207,7 +207,7 @@
           animation__rotation="property: light.intensity; from:0; to: 6; loop: 1; dur: 2000; delay:100; dir: alternate; startEvents: click;"
         ></a-entity>
       </a-entity>
-      <a-entity shaperain id="firstPerformance" visible="false">
+      <a-entity id="firstPerformance" visible="false">
         <a-sky
           id="scene1Sky"
           geometry="primitive:sphere; radius:170; phiLength:360; phiStart:0; thetaLength:90"
