transitions between scenes changed, post 2/27 meeting

--- a/public/main.html
+++ b/public/main.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <!-- <div id="openingTitle">
+    <div id="openingTitle">
       <div id="fullscreenFadeIn"></div>
       <audio id="lobbyMusic" src="./sounds/lobbysound.mp3" loop="loop"></audio>
       <div class="textcontainer" id="textcontainer1">
@@ -42,7 +42,7 @@
           <a href="#" id="toScene" onclick="fadein()">Enter the World</a>
         </div>
       </div>
-    </div> -->
+    </div>
     <div class="nodisplay" id="panelToFadeBetweenScenes"></div>
     <div class="textcontainer nodisplay roboticfont" id="breatheIn">
       <h1>Breathe In</h1>
@@ -90,7 +90,7 @@
         <img id="cracksWhite" src="textures/cracksTextures/crackWhite.png" />
       </a-assets>
       <!-- for some reason this allows the scene to be paused on loading the page. -->
-      <!-- <a-node id="waitOnMe"></a-node> -->
+      <a-node id="waitOnMe"></a-node>
 
       <a-entity id="lobby">
         <a-plane
