--- a/public/index.html
+++ b/public/index.html
@@ -12,20 +12,20 @@
 
   <body>
     <audio id="player" autoplay allow="autoplay">
-      <source src="sounds/hallway_exp.mp3" type="audio/mp3" />
+      <source src="sounds/new/0_opening VO.mp3" type="audio/mp3" />
     </audio>
     <audio id="ground_addition_to_base">
-      <source src="sounds/ground_addition_to_base.mp3" type="audio/mp3" />
+      <source src="sounds/new/0_opening VO.mp3" type="audio/mp3" />
     </audio>
 
     <audio id="performance_of_the_ground">
-      <source src="sounds/performance_of_the_ground.mp3" type="audio/mp3" />
+      <source src="sounds/new/0_opening VO.mp3" type="audio/mp3" />
     </audio>
     <audio id="base_layer_always_on" loop>
-      <source src="sounds/base_layer_always_on.mp3" type="audio/mp3" />
+      <source src="sounds/new/0_addition to base_synth+sounds.mp3" type="audio/mp3" />
     </audio>
     <audio id="hallway_addition_to_base">
-      <source src="sounds/hallway_addition_to_base.mp3" type="audio/mp3" />
+      <source src="sounds/new/0_opening VO.mp3" type="audio/mp3" />
     </audio>
     <div id="openingTitle">
       <div id="fullscreenFadeIn"></div>
