--- a/bin/opening.html
+++ b/bin/opening.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <div id="fullscreenFadeIn"></div>
-    <audio id="lobbyMusic" src="./sounds/lobbysound.mp3" loop="loop"></audio>
+    <!-- <audio id="lobbyMusic" src="./sounds/lobbysound.mp3" loop="loop"></audio> -->
     <div class="textcontainer " id="textcontainer1">
       <!-- <div class="textcontainer" id="textcontainer1"> -->
       <h1 class="nodisplay" id="text1">When once the sky was blue</h1>
