added new francis textures

--- a/public/index.html
+++ b/public/index.html
@@ -100,8 +100,10 @@
   > -->
       <a-assets>
         <img id="shadow" crossorigin="anonymous" src="static/shadow.png" />
-        <a-asset-item id="francis-obj" src="static/cloak.obj"></a-asset-item>
-        <a-asset-item id="francis-mtl" src="static/cloak.mtl"></a-asset-item>
+        <a-asset-item id="francis-1-obj" src="static/francis1.obj"></a-asset-item>
+        <a-asset-item id="francis-1-mtl" src="static/francis1.mtl"></a-asset-item>
+        <a-asset-item id="francis-2-obj" src="static/francis2.obj"></a-asset-item>
+        <a-asset-item id="francis-2-mtl" src="static/francis2.mtl"></a-asset-item>
         <a-asset-item
           id="francis-color-obj"
           src="static/colours/cloak_red.obj"
@@ -252,7 +254,7 @@
           francis1mouseenter
           id="francis1"
           class="francis"
-          obj-model="obj: #francis-obj; mtl: #francis-mtl"
+          obj-model="obj: #francis-1-obj; mtl: #francis-1-mtl"
           position="-5.048 -0.238 -3"
           scale="0.03 0.03 0.03"
           rotation="0 50 0"
@@ -392,7 +394,7 @@
           francis2mouseenter
           id="francis2"
           class="francis"
-          obj-model="obj: #francis-obj; mtl: #francis-mtl"
+          obj-model="obj: #francis-2-obj; mtl: #francis-2-mtl"
           position="0 -0.238 -6.897"
           scale="0.03 0.03 0.03"
           light="type: hemisphere; color: white; intensity: 0;"
@@ -402,7 +404,7 @@
           francis3mouseenter
           id="francis3"
           class="francis"
-          obj-model="obj: #francis-obj; mtl: #francis-mtl"
+          obj-model="obj: #francis-1-obj; mtl: #francis-1-mtl"
           position="4.748 -0.238 -3"
           scale="0.03 0.03 0.03"
           rotation="0 -50 0"
